force-app/main/default/objects/Absence_Registration__c/Absence_Registration__c.object-meta.xml
<CustomObject>
    <label>Absence Registration</label>
    <nameField>
        <displayFormat>AR-{00000000}</displayFormat>
        <label>AR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Absence Registrations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>