force-app/main/default/objects/Absence_Registration__c/fields/Absence_duration__c.field-meta.xml
<CustomField>
    <fullName>Absence_duration__c</fullName>
    <formula>(Certificate_End_Date__c - Certificate_Start_Date__c) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Absence duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>