force-app/main/default/objects/Absence_Registration__c/fields/Absence_Information__c.field-meta.xml
<CustomField>
    <fullName>Absence_Information__c</fullName>
    <label>Absence Information</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>