force-app/main/default/objects/Absence_Registration__c/fields/Absence_Search__c.field-meta.xml
<CustomField>
    <fullName>Absence_Search__c</fullName>
    <description>US 336- Request medical check (France)
Display ongoing absences to employees</description>
    <formula>&quot;Name: &quot; + Name + &apos; &apos; + BR() + 
&quot;Date de soumission: &quot; + TEXT( DATEVALUE(CreatedDate)) + &apos; &apos; + BR() + 
&quot;Status: &quot; + TEXT( Status_MC__c )</formula>
    <label>Absence Search</label>
    <type>Text</type>
</CustomField>