force-app/main/default/objects/Absence_Registration__c/fields/Access_code__c.field-meta.xml
<CustomField>
    <fullName>Access_code__c</fullName>
    <label>Access code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>