force-app/main/default/objects/Absence_Registration__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field populated by process. US-OAPPMEDCHECK-421</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Absence Registrations</relationshipLabel>
    <relationshipName>Absence_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>