force-app/main/default/objects/Absence_Registration__c/fields/Additional_Info_for_Medical_file__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info_for_Medical_file__c</fullName>
    <description>US 259 - 396 - 305
Medical Codification for doctor&apos;s analysis</description>
    <label>Additional Info for Medical file</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>