force-app/main/default/objects/Absence_Registration__c/fields/Additional_information__c.field-meta.xml
<CustomField>
    <fullName>Additional_information__c</fullName>
    <inlineHelpText>Information will be sent to the doctor</inlineHelpText>
    <label>Additional Information</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>