force-app/main/default/objects/Absence_Registration__c/fields/Apartment_number__c.field-meta.xml
<CustomField>
    <fullName>Apartment_number__c</fullName>
    <label>Apartment number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>