force-app/main/default/objects/Absence_Registration__c/fields/Appointment_will_be_made_by__c.field-meta.xml
<CustomField>
    <fullName>Appointment_will_be_made_by__c</fullName>
    <description>US-OAPPMEDCHECK-244</description>
    <label>Appointment will be made by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Securex</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>