force-app/main/default/objects/Absence_Registration__c/fields/Authorised_from_First_Timeslot__c.field-meta.xml
<CustomField>
    <fullName>Authorised_from_First_Timeslot__c</fullName>
    <description>US-OAPPMEDCHECK-344</description>
    <inlineHelpText>These fields indicate the specific visiting hours. Please use the following format: 00:00.</inlineHelpText>
    <label>Authorised from (First Timeslot)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>