force-app/main/default/objects/Absence_Registration__c/fields/Authorised_to_First_Timeslot__c.field-meta.xml
<CustomField>
    <fullName>Authorised_to_First_Timeslot__c</fullName>
    <description>US-OAPPMEDCHECK-244</description>
    <label>Authorised to (First Timeslot)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>