force-app/main/default/objects/Absence_Registration__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <label>Building</label>
    <length>50</length>
    <type>Text</type>
</CustomField>