force-app/main/default/objects/Absence_Registration__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>OAPPMEDCHECK-563 : Link between case and absence registration</description>
    <label>Case</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Main_Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Absence Registrations</relationshipLabel>
    <relationshipName>Absence_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>