force-app/main/default/objects/Absence_Registration__c/fields/Cause_chifre__c.field-meta.xml
<CustomField>
    <fullName>Cause_chifre__c</fullName>
    <label>Cause (chifre)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cause_chifre</valueSetName>
    </valueSet>
</CustomField>