force-app/main/default/objects/Absence_Registration__c/fields/Certifcate_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Certifcate_Start_Date__c</fullName>
    <label>Certifcate Start Date</label>
    <type>Date</type>
</CustomField>