force-app/main/default/objects/Absence_Registration__c/fields/Certificate_Country__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Country__c</fullName>
    <inlineHelpText>Limites the options in the &quot;Exit home authorized&quot; field.</inlineHelpText>
    <label>Certificate Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Belgian medical certificate</fullName>
            </value>
            <value>
                <fullName>French medical certificate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>