force-app/main/default/objects/Absence_Registration__c/fields/Certificate_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Certificate_End_Date__c</fullName>
    <label>Certificate End Date</label>
    <type>Date</type>
</CustomField>