force-app/main/default/objects/Absence_Registration__c/fields/Certificate_in_our_possession__c.field-meta.xml
<CustomField>
    <fullName>Certificate_in_our_possession__c</fullName>
    <description>US-OAPPMEDCHECK-244</description>
    <label>Certificate in our possession?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>