force-app/main/default/objects/Absence_Registration__c/fields/Certificate_Reception_Date__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Reception_Date__c</fullName>
    <label>Certificate Reception Date</label>
    <type>Date</type>
</CustomField>