force-app/main/default/objects/Absence_Registration__c/fields/Certificate_Registration__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the goal of the absence registration. US-OAPPMEDCHECK-226</description>
    <label>Certificate Registration</label>
    <type>Checkbox</type>
</CustomField>