force-app/main/default/objects/Absence_Registration__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Phone</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Letter</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Mail-xls</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Fax</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Email</label>
            </value>
            <value>
                <fullName>mail</fullName>
                <label>Mail-xml (CA)</label>
            </value>
            <value>
                <fullName>eMcm</fullName>
                <label>eMCM</label>
            </value>
            <value>
                <fullName>sftp</fullName>
                <label>sFTP</label>
            </value>
            <value>
                <fullName>ws</fullName>
                <label>WS</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>absence@work</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Dali</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>