force-app/main/default/objects/Absence_Registration__c/fields/Check_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Check_Parent_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Parent Account</label>
    <type>Checkbox</type>
</CustomField>