force-app/main/default/objects/Absence_Registration__c/fields/Contact_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_2_Name__c</fullName>
    <label>Contact 2 Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>