force-app/main/default/objects/Absence_Registration__c/fields/Contact_2_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_2_Phone__c</fullName>
    <label>Contact 2 Phone</label>
    <type>Phone</type>
</CustomField>