force-app/main/default/objects/Absence_Registration__c/fields/Contact_name__c.field-meta.xml
<CustomField>
    <fullName>Contact_name__c</fullName>
    <label>Contact Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>