force-app/main/default/objects/Absence_Registration__c/fields/Contract_Home__c.field-meta.xml
<CustomField>
    <fullName>Contract_Home__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>OAPPMEDCHECK-123 Fill while checking if client has a pack Contract.</description>
    <label>Contract Home</label>
    <referenceTo>Contract_Home__c</referenceTo>
    <relationshipLabel>Absence Registrations</relationshipLabel>
    <relationshipName>Absence_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>