force-app/main/default/objects/Absence_Registration__c/fields/Controle_requested__c.field-meta.xml
<CustomField>
    <fullName>Controle_requested__c</fullName>
    <description>US-OAPPMEDCHECK-244</description>
    <label>TO DELETE Controle requested?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>