force-app/main/default/objects/Absence_Registration__c/fields/Count_Related_SA__c.field-meta.xml
<CustomField>
    <fullName>Count_Related_SA__c</fullName>
    <description>US 500 - Rapport d&apos;activité client
Champ permettant de compter le nombre de SA liés à une absence
Utile pour le reporting</description>
    <label>Count of related SA</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>