force-app/main/default/objects/Absence_Registration__c/fields/Custom_criteria_checked__c.field-meta.xml
<CustomField>
    <fullName>Custom_criteria_checked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is true when an absence registration record type BE is verified with checkCustomCriteria in AbsenceRegistrationManager
OAPPMEDCHECK-98</description>
    <label>Custom criteria checked</label>
    <type>Checkbox</type>
</CustomField>