force-app/main/default/objects/Absence_Registration__c/fields/Customer_Question__c.field-meta.xml
<CustomField>
    <fullName>Customer_Question__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Question</label>
    <type>Checkbox</type>
</CustomField>