force-app/main/default/objects/Absence_Registration__c/fields/Date_Time_medical_check__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_medical_check__c</fullName>
    <description>US 259 &amp;&amp; 396 &amp;&amp; 405
After the MC, the doctor has to register date/time of either home visit or convocation</description>
    <inlineHelpText>Date/Time of home visit or Convocation</inlineHelpText>
    <label>Date/Time medical check</label>
    <type>DateTime</type>
</CustomField>