force-app/main/default/objects/Absence_Registration__c/fields/Date_work_accident__c.field-meta.xml
<CustomField>
    <fullName>Date_work_accident__c</fullName>
    <label>Date work accident</label>
    <type>Date</type>
</CustomField>