force-app/main/default/objects/Absence_Registration__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Absence Registrations (Department)</relationshipLabel>
    <relationshipName>Absence_Registrations_department</relationshipName>
    <type>Lookup</type>
</CustomField>