force-app/main/default/objects/Absence_Registration__c/fields/Department_code_customer__c.field-meta.xml
<CustomField>
    <fullName>Department_code_customer__c</fullName>
    <description>OAPPMEDCHECK-920: shows the department code customer field of the related account. This is a code with which the customer identifies the department.</description>
    <formula>Account__r.departmentCode_Customer__c</formula>
    <label>Department code customer</label>
    <type>Text</type>
</CustomField>