force-app/main/default/objects/Absence_Registration__c/fields/DepartmentId__c.field-meta.xml
<CustomField>
    <fullName>DepartmentId__c</fullName>
    <description>Created to map the received info from the XML, in order to be future proof in case the info would be needed in the future.
See OAPPMEDCHECK-104</description>
    <label>DepartmentId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>