force-app/main/default/objects/Absence_Registration__c/fields/Dispute__c.field-meta.xml
<CustomField>
    <fullName>Dispute__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dispute</label>
    <type>Checkbox</type>
</CustomField>