force-app/main/default/objects/Absence_Registration__c/fields/Doctor_City__c.field-meta.xml
<CustomField>
    <fullName>Doctor_City__c</fullName>
    <label>Doctor City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>