force-app/main/default/objects/Absence_Registration__c/fields/Doctor_conclusion__c.field-meta.xml
<CustomField>
    <fullName>Doctor_conclusion__c</fullName>
    <description>US 259 &amp;&amp; 396 &amp;&amp; 405
After the MC, the doctor has to decide if he accepts or disagree with the employee&apos;s absence
US 447
In FR _ The decision is registered by the operator for a doctor</description>
    <label>Doctor conclusion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acceptation</fullName>
            </value>
            <value>
                <fullName>Refusal</fullName>
            </value>
            <value>
                <fullName>Arrêt de travail médicalement justifié ce jour</fullName>
            </value>
            <value>
                <fullName>Arrêt de travail médicalement justifié ce jour - Prolongation possible</fullName>
            </value>
            <value>
                <fullName>Arrêt justifié reprise envisageable</fullName>
            </value>
            <value>
                <fullName>Absence de réponse au lieu de résidence</fullName>
            </value>
            <value>
                <fullName>Absence du salarie confirmée par un tiers</fullName>
            </value>
            <value>
                <fullName>Arrêt de travail plus médicalement justifié ce jour</fullName>
            </value>
            <value>
                <fullName>Refus de contrôle ou d&apos;examen</fullName>
            </value>
            <value>
                <fullName>Adresse incomplète ou problématique</fullName>
            </value>
            <value>
                <fullName>Problème de code d&apos;accès</fullName>
            </value>
            <value>
                <fullName>Salarié pas en arrêt de travail</fullName>
            </value>
            <value>
                <fullName>Salarié non présenté au cabinet</fullName>
            </value>
            <value>
                <fullName>Arrêt de travail non justifié médicalement ce jour</fullName>
                <isActive>false</isActive>
                <label>Arrêt de travail non justifié médicalement ce jour</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>