force-app/main/default/objects/Absence_Registration__c/fields/Doctor_conclusion_Deprecated__c.field-meta.xml
<CustomField>
    <fullName>Doctor_conclusion_Deprecated__c</fullName>
    <description>US 259 &amp;&amp; 396 &amp;&amp; 405
After the MC, the doctor has to decide if he accepts or disagree with the employee&apos;s absence
US 447
In FR _ The decision is registered by the operator for a doctor</description>
    <label>Doctor conclusion_Deprecated</label>
    <type>TextArea</type>
</CustomField>