force-app/main/default/objects/Absence_Registration__c/fields/Doctor_Country__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Country__c</fullName>
    <description>US-OAPPMEDCHECK-244</description>
    <label>Doctor Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FRA</fullName>
                <label>France</label>
            </value>
            <value>
                <fullName>BEL</fullName>
                <label>Belgium</label>
            </value>
            <value>
                <fullName>LUX</fullName>
                <label>Luxembourg</label>
            </value>
            <value>
                <fullName>NLD</fullName>
                <label>Netherlands</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>