force-app/main/default/objects/Absence_Registration__c/fields/Doctor_Decision_on_absence__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Decision_on_absence__c</fullName>
    <description>US 259 &amp;&amp; 396 &amp;&amp; 405
After the MC, the doctor has to decide if he accepts or disagree with the employee&apos;s absence</description>
    <label>Doctor&apos;s decision on absence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acceptation</fullName>
            </value>
            <value>
                <fullName>Refusal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>