force-app/main/default/objects/Absence_Registration__c/fields/Doctor_Firstname__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Firstname__c</fullName>
    <label>Doctor First name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>