force-app/main/default/objects/Absence_Registration__c/fields/Doctor_House_box_number__c.field-meta.xml
<CustomField>
    <fullName>Doctor_House_box_number__c</fullName>
    <label>Doctor House box number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>