force-app/main/default/objects/Absence_Registration__c/fields/Doctor_ID__c.field-meta.xml
<CustomField>
    <fullName>Doctor_ID__c</fullName>
    <label>Doctor ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>