force-app/main/default/objects/Absence_Registration__c/fields/Doctor_Name__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Name__c</fullName>
    <label>Doctor Last name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>