force-app/main/default/objects/Absence_Registration__c/fields/Doctor_Phone__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Phone__c</fullName>
    <label>Doctor Phone</label>
    <type>Phone</type>
</CustomField>