force-app/main/default/objects/Absence_Registration__c/fields/Doctor_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Postal_Code__c</fullName>
    <label>Doctor Postal Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>