force-app/main/default/objects/Absence_Registration__c/fields/Doctor_Street__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Street__c</fullName>
    <label>Doctor Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>