force-app/main/default/objects/Absence_Registration__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Employee</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Employee__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>External Employee</value>
        </filterItems>
        <filterItems>
            <field>Employee__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>External Employee FR</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Absence Registrations</relationshipLabel>
    <relationshipName>Absence_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>