force-app/main/default/objects/Absence_Registration__c/fields/Examination__c.field-meta.xml
<CustomField>
    <fullName>Examination__c</fullName>
    <description>OAPPMEDCHECK-416: New Fields on Absence &amp; SA-level (Be)</description>
    <label>Examination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Allowed</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Not allowed</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Impossible</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>