force-app/main/default/objects/Absence_Registration__c/fields/Exceptional_SLA_Department__c.field-meta.xml
<CustomField>
    <fullName>Exceptional_SLA_Department__c</fullName>
    <description>OAPPMEDCHECK-169: Used to display the exceptional procedures for the department linked to the absence.
Automatically filled from the related department</description>
    <label>Exceptional SLA Department</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>