force-app/main/default/objects/Absence_Registration__c/fields/Exceptional_SLA_Main_Account__c.field-meta.xml
<CustomField>
    <fullName>Exceptional_SLA_Main_Account__c</fullName>
    <description>OAPPMEDCHECK-169: Used to display the exceptional procedures for the main account linked to the absence.
Automatically filled from the related main account</description>
    <label>Exceptional SLA Main Account</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>