force-app/main/default/objects/Absence_Registration__c/fields/Execute_MC__c.field-meta.xml
<CustomField>
    <fullName>Execute_MC__c</fullName>
    <label>Controle requested?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>