force-app/main/default/objects/Absence_Registration__c/fields/Exit_home_authorized__c.field-meta.xml
<CustomField>
    <fullName>Exit_home_authorized__c</fullName>
    <label>Exit home authorized</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Authorized</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Forbidden</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Not mentionned</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Free exits</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Mandatory attendance hours</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Exits allowed during specified hours</label>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>