force-app/main/default/objects/Absence_Registration__c/fields/External_reference__c.field-meta.xml
<CustomField>
    <fullName>External_reference__c</fullName>
    <description>Customer External Reference.</description>
    <externalId>true</externalId>
    <label>External reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>