force-app/main/default/objects/Absence_Registration__c/fields/Extra_information__c.field-meta.xml
<CustomField>
    <fullName>Extra_information__c</fullName>
    <label>Extra information</label>
    <type>TextArea</type>
</CustomField>