force-app/main/default/objects/Absence_Registration__c/fields/Federation_Main__c.field-meta.xml
<CustomField>
    <fullName>Federation_Main__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Federation Main</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Absence Registrations (Federation Main)</relationshipLabel>
    <relationshipName>Absence_Registrations_Federation_Main</relationshipName>
    <type>Lookup</type>
</CustomField>