force-app/main/default/objects/Absence_Registration__c/fields/Federation_Member__c.field-meta.xml
<CustomField>
    <fullName>Federation_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Federation Member</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Absence Registrations (Federation Member)</relationshipLabel>
    <relationshipName>Absence_Registrations_Member</relationshipName>
    <type>Lookup</type>
</CustomField>