force-app/main/default/objects/Absence_Registration__c/fields/Fulltime_equivalent__c.field-meta.xml
<CustomField>
    <fullName>Fulltime_equivalent__c</fullName>
    <label>Fulltime equivalent</label>
    <length>80</length>
    <type>Text</type>
</CustomField>