force-app/main/default/objects/Absence_Registration__c/fields/I_II_III_Origine_lettre__c.field-meta.xml
<CustomField>
    <fullName>I_II_III_Origine_lettre__c</fullName>
    <label>I-II-III - Origine (lettre)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_II_III_Origine_lettre</valueSetName>
    </valueSet>
</CustomField>