force-app/main/default/objects/Absence_Registration__c/fields/Ignore_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Additional_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>check this checkbox when Additional Information has content for by pass the on hold</inlineHelpText>
    <label>Ignore Additional Information</label>
    <type>Checkbox</type>
</CustomField>