force-app/main/default/objects/Absence_Registration__c/fields/Ignore_Protest_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Protest_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>check this checkbox when Type is prostest certificate for by pass the on hold</inlineHelpText>
    <label>Ignore Protest Certificate</label>
    <type>Checkbox</type>
</CustomField>