force-app/main/default/objects/Absence_Registration__c/fields/Initial_start_date__c.field-meta.xml
<CustomField>
    <fullName>Initial_start_date__c</fullName>
    <label>Initial start date</label>
    <type>Date</type>
</CustomField>