force-app/main/default/objects/Absence_Registration__c/fields/Injuries__c.field-meta.xml
<CustomField>
    <fullName>Injuries__c</fullName>
    <description>FR only: Explanation of injuries caused by work accidents.UAT fr request.</description>
    <label>Lésions déclarées</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>